Don't require IDs for post operations since ID will be generated
